--- a/ViewModel/App.xaml
+++ b/ViewModel/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="BigFileWatcher.App"
+﻿<Application x:Class="ViewModel.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:BigFileWatcher"
+             xmlns:local="clr-namespace:ViewModel"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
